@@ -62,29 +62,17 @@ Partial Class FlashAlgorithmConfig
         Me.Label2 = New System.Windows.Forms.Label()
         Me.tbPTIntTol = New System.Windows.Forms.TextBox()
         Me.Label1 = New System.Windows.Forms.Label()
-        Me.TabPageST = New System.Windows.Forms.TabPage()
-        Me.GroupBox10 = New System.Windows.Forms.GroupBox()
-        Me.NumericUpDown1 = New System.Windows.Forms.NumericUpDown()
-        Me.Label27 = New System.Windows.Forms.Label()
-        Me.GroupBox9 = New System.Windows.Forms.GroupBox()
-        Me.Label28 = New System.Windows.Forms.Label()
-        Me.chkForcePT3P = New System.Windows.Forms.CheckBox()
         Me.TabControl1.SuspendLayout()
         Me.TabPageGeneral.SuspendLayout()
         Me.GroupBox4.SuspendLayout()
         Me.TabPageConvPars.SuspendLayout()
         Me.GroupBox1.SuspendLayout()
-        Me.TabPageST.SuspendLayout()
-        Me.GroupBox10.SuspendLayout()
-        CType(Me.NumericUpDown1, System.ComponentModel.ISupportInitialize).BeginInit()
-        Me.GroupBox9.SuspendLayout()
         Me.SuspendLayout()
         '
         'TabControl1
         '
         Me.TabControl1.Controls.Add(Me.TabPageGeneral)
         Me.TabControl1.Controls.Add(Me.TabPageConvPars)
-        Me.TabControl1.Controls.Add(Me.TabPageST)
         resources.ApplyResources(Me.TabControl1, "TabControl1")
         Me.TabControl1.Name = "TabControl1"
         Me.TabControl1.SelectedIndex = 0
@@ -323,53 +311,6 @@ Partial Class FlashAlgorithmConfig
         resources.ApplyResources(Me.Label1, "Label1")
         Me.Label1.Name = "Label1"
         '
-        'TabPageST
-        '
-        Me.TabPageST.Controls.Add(Me.GroupBox10)
-        Me.TabPageST.Controls.Add(Me.GroupBox9)
-        resources.ApplyResources(Me.TabPageST, "TabPageST")
-        Me.TabPageST.Name = "TabPageST"
-        Me.TabPageST.UseVisualStyleBackColor = True
-        '
-        'GroupBox10
-        '
-        resources.ApplyResources(Me.GroupBox10, "GroupBox10")
-        Me.GroupBox10.Controls.Add(Me.NumericUpDown1)
-        Me.GroupBox10.Controls.Add(Me.Label27)
-        Me.GroupBox10.Name = "GroupBox10"
-        Me.GroupBox10.TabStop = False
-        '
-        'NumericUpDown1
-        '
-        resources.ApplyResources(Me.NumericUpDown1, "NumericUpDown1")
-        Me.NumericUpDown1.Minimum = New Decimal(New Integer() {5, 0, 0, 0})
-        Me.NumericUpDown1.Name = "NumericUpDown1"
-        Me.NumericUpDown1.Value = New Decimal(New Integer() {5, 0, 0, 0})
-        '
-        'Label27
-        '
-        resources.ApplyResources(Me.Label27, "Label27")
-        Me.Label27.Name = "Label27"
-        '
-        'GroupBox9
-        '
-        resources.ApplyResources(Me.GroupBox9, "GroupBox9")
-        Me.GroupBox9.Controls.Add(Me.Label28)
-        Me.GroupBox9.Controls.Add(Me.chkForcePT3P)
-        Me.GroupBox9.Name = "GroupBox9"
-        Me.GroupBox9.TabStop = False
-        '
-        'Label28
-        '
-        resources.ApplyResources(Me.Label28, "Label28")
-        Me.Label28.Name = "Label28"
-        '
-        'chkForcePT3P
-        '
-        resources.ApplyResources(Me.chkForcePT3P, "chkForcePT3P")
-        Me.chkForcePT3P.Name = "chkForcePT3P"
-        Me.chkForcePT3P.UseVisualStyleBackColor = True
-        '
         'FlashAlgorithmConfig
         '
         resources.ApplyResources(Me, "$this")
@@ -385,12 +326,6 @@ Partial Class FlashAlgorithmConfig
         Me.TabPageConvPars.ResumeLayout(False)
         Me.GroupBox1.ResumeLayout(False)
         Me.GroupBox1.PerformLayout()
-        Me.TabPageST.ResumeLayout(False)
-        Me.GroupBox10.ResumeLayout(False)
-        Me.GroupBox10.PerformLayout()
-        CType(Me.NumericUpDown1, System.ComponentModel.ISupportInitialize).EndInit()
-        Me.GroupBox9.ResumeLayout(False)
-        Me.GroupBox9.PerformLayout()
         Me.ResumeLayout(False)
 
     End Sub
@@ -427,13 +362,6 @@ Partial Class FlashAlgorithmConfig
     Friend WithEvents Label25 As Label
     Friend WithEvents tbPV_EpsilonT As TextBox
     Friend WithEvents Label26 As Label
-    Friend WithEvents TabPageST As TabPage
-    Friend WithEvents NumericUpDown1 As NumericUpDown
-    Friend WithEvents Label27 As Label
-    Friend WithEvents GroupBox10 As GroupBox
-    Friend WithEvents GroupBox9 As GroupBox
-    Friend WithEvents chkForcePT3P As CheckBox
-    Friend WithEvents Label28 As Label
     Friend WithEvents tbPH_MaxDT As TextBox
     Friend WithEvents Label29 As Label
     Friend WithEvents tbPT_DampingFactor As TextBox
