@@ -3,4 +3,5 @@ Version 6.3 Update 5
 - [CHG] Optimized script execution in advanced kinetic reactors
 - [FIX] Fixed convergence issues with Liquid-Liquid Extractor
 - [FIX] Fixed convergence issues with Gibbs Reactor
+- [FIX] Fixed issues with equilibrium calculations
 - [FIX] Layout and other fixes
